<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@id/homeFragment"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/menu_home"
        app:contentDescription="@string/menu_home" />

    <item
        android:id="@id/communityFragment"
        android:icon="@drawable/ic_nav_community"
        android:title="@string/menu_community"
        app:contentDescription="@string/menu_community" />

    <item
        android:id="@id/teamRecruitmentFragment"
        android:icon="@drawable/ic_nav_team_recruitment"
        android:title="@string/menu_team_recruitment"
        app:contentDescription="@string/menu_team_recruitment" />

    <item
        android:id="@id/myTeamFragment"
        android:icon="@drawable/ic_nav_my_team"
        android:title="@string/menu_my_team"
        app:contentDescription="@string/menu_my_team" />

    <item
        android:id="@id/myPageFragment"
        android:icon="@drawable/ic_nav_my_page"
        android:title="@string/menu_my_page"
        app:contentDescription="@string/menu_my_page" />
</menu>