<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.connectcrew.presentation.screen.feature.project.projectintroduction.ProjectEnrollmentViewModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".screen.feature.project.projectintroduction.ProjectEnrollmentContactAlertDialog">

        <TextView
            android:id="@+id/tv_title"
            style="@style/Widget.TeamOne.TextView.Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="20dp"
            android:text="@string/project_detail_enrollment_contact_title" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.TeamOne.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="10dp"
            app:endIconMode="none">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_write_enrollment_contact"
                style="@style/Widget.TeamOne.TextInputEditText.OutlinedBox.MultiLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:hint="@string/project_detail_enrollment_contact_hint"
                android:maxHeight="260dp"
                android:minHeight="160dp"
                android:scrollbars="vertical"
                android:text="@{viewModel.enrollmentContact}" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            style="@style/Widget.TeamOne.TextView.Caption2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginHorizontal="24dp"
            android:layout_marginBottom="20dp"
            android:gravity="center_vertical"
            android:text="@string/project_detail_enrollment_contact_description"
            android:textColor="@color/color_9e9e9e"
            app:drawableStartCompat="@drawable/ic_warning_circle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_cancel"
                style="@style/Widget.TeamOne.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/color_eeeeee"
                android:gravity="center"
                android:text="@string/common_cancel"
                android:textAppearance="@style/TextAppearance.TeamOne.Button2"
                android:textColor="@color/color_616161"
                app:cornerRadius="0dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_enrollment"
                style="@style/Widget.TeamOne.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="@{viewModel.enrollmentContact.length() > 0}"
                android:text="@string/project_detail_introduction_enroll"
                android:textAppearance="@style/TextAppearance.TeamOne.Button2"
                app:cornerRadius="0dp" />
        </LinearLayout>
    </LinearLayout>
</layout>